...
        android:layout_height="wrap_content"
        android:text="Remember Me"
        android:textColor="?android:attr/textColorPrimary"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        android:layout_marginTop="16dp"
        android:textColor="?android:attr/textColorPrimary" />

...
